vlib/v/scanner/tests/position_0_err.out
vlib/v/scanner/tests/position_0_err.vv:1:1: error: unused variable: `i`
    1 | i := 'hello'
      | ^
    2 | x := 3
    3 | y := 2
