vlib/v/scanner/tests/position_0_err.vv
i := 'hello'
x := 3
y := 2
println(x + y)
